--- a/package.json
+++ b/package.json
@@ -12,26 +12,27 @@
 		"release": "webpack --config webpack.config.prod.js"
 	},
 	"dependencies": {
+		"antd": "^3.26.5",
 		"react": "^16.9.0",
 		"react-dom": "^16.9.0"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.5.5",
 		"@babel/core": "^7.5.5",
+		"@babel/plugin-proposal-class-properties": "^7.7.4",
 		"@babel/preset-env": "^7.5.5",
 		"@babel/preset-react": "^7.0.0",
 		"babel-loader": "^8.0.6",
-		"css-loader": "^3.2.0",
-		"element-react": "^1.4.34",
-		"element-theme-default": "^1.4.13",
-		"file-loader": "^5.0.2",
+		"babel-plugin-import": "^1.13.0",
 		"html-webpack-plugin": "^3.2.0",
 		"less": "^3.10.3",
 		"less-loader": "^5.0.0",
-		"react-hot-loader": "^4.12.18",
-		"react-redux": "^7.1.3",
-		"redux": "^4.0.5",
 		"style-loader": "^1.0.0",
+		"css-loader": "^3.2.0",
+		"file-loader": "^5.0.2",
+		"react-hot-loader": "^4.12.18",
+		"redux": "^4.0.5",
+		"react-redux": "^7.1.3",
 		"webpack": "^4.39.2",
 		"webpack-cli": "^3.3.6",
 		"webpack-dev-server": "^3.8.0"
