--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
 	"dependencies": {
 		"antd": "^3.26.5",
 		"react": "^16.9.0",
-		"react-dom": "^16.9.0"
+		"react-dom": "^16.9.0",
+		"react-redux": "^7.1.3",
+		"redux": "^4.0.5"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.5.5",
@@ -30,8 +32,6 @@
 		"less": "^3.10.3",
 		"less-loader": "^5.0.0",
 		"react-hot-loader": "^4.12.18",
-		"react-redux": "^7.1.3",
-		"redux": "^4.0.5",
 		"style-loader": "^1.0.0",
 		"webpack": "^4.39.2",
 		"webpack-cli": "^3.3.6",
