--- a/package.json
+++ b/package.json
@@ -1,40 +1,25 @@
 {
-	"name": "ctftools",
-	"version": "1.0.0",
-	"description": "a series of tools in a web page.",
-	"main": "index.jsx",
-	"repository": "https://github.com/Palmcivet/CTF-tools.git",
-	"author": "Palm Civet <palmcivet_email@qq.com>",
-	"license": "MIT",
-	"scripts": {
-		"build": "webpack --config webpack.config.dev.js",
-		"server": "webpack-dev-server --config webpack.config.dev.js",
-		"release": "webpack --config webpack.config.prod.js"
-	},
-	"dependencies": {
-		"antd": "^3.26.5",
-		"react": "^16.9.0",
-		"react-dom": "^16.9.0",
-		"react-redux": "^7.1.3",
-		"redux": "^4.0.5"
-	},
-	"devDependencies": {
-		"@babel/cli": "^7.5.5",
-		"@babel/core": "^7.5.5",
-		"@babel/plugin-proposal-class-properties": "^7.7.4",
-		"@babel/preset-env": "^7.5.5",
-		"@babel/preset-react": "^7.0.0",
-		"babel-loader": "^8.0.6",
-		"babel-plugin-import": "^1.13.0",
-		"css-loader": "^3.2.0",
-		"file-loader": "^5.0.2",
-		"html-webpack-plugin": "^3.2.0",
-		"less": "^3.10.3",
-		"less-loader": "^5.0.0",
-		"react-hot-loader": "^4.12.18",
-		"style-loader": "^1.0.0",
-		"webpack": "^4.39.2",
-		"webpack-cli": "^3.3.6",
-		"webpack-dev-server": "^3.8.0"
-	}
+  "name": "my-vue-app",
+  "version": "0.0.0",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
+  },
+  "dependencies": {
+    "@typescript-eslint/parser": "^4.22.0",
+    "echarts": "^5.1.0",
+    "element-plus": "^1.0.2-beta.40",
+    "typescript": "^4.2.4",
+    "vue": "^3.0.5",
+    "vue-router": "^4.0.6"
+  },
+  "devDependencies": {
+    "@rollup/plugin-alias": "^3.1.2",
+    "@vitejs/plugin-vue": "^1.2.1",
+    "@vue/compiler-sfc": "^3.0.5",
+    "less": "^4.1.1",
+    "vite": "^2.1.5",
+    "vite-plugin-style-import": "^0.9.2"
+  }
 }
